[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "Command-line PDF utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pillow",
    "PyPDF2"
]
license = { file = "LICENSE" }
authors = [
    { name = "Yathurshan Manoharan" }
]
keywords = ["pdf", "cli", "utilities", "merge", "encrypt", "decrypt", "rotate", "extract"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]

[project.scripts]
pdf-create  = "pdf_tools.pdf_create:main"
pdf-decrypt = "pdf_tools.pdf_decrypt:main"
pdf-encrypt = "pdf_tools.pdf_encrypt:main"
pdf-extract = "pdf_tools.pdf_extract:main"
pdf-merge   = "pdf_tools.pdf_merge:main"
pdf-rotate  = "pdf_tools.pdf_rotate:main"
pdf-select  = "pdf_tools.pdf_select:main"